# smart_hive

./: .gitignore  CMakeLists.txt  clean.sh  diagram.json  idf_component.yml  lcd.html  rebuild.sh  sdkconfig  sdkconfig.old  start.sh  sync.sh  up.sh  web.html  wokwi-run.sh  wokwi.toml
.cache/clangd/index/: ai_engine.cpp.C6B64FEAE938A759.idx  ai_engine.h.EE35D6676F5084A3.idx  alarm.cpp.CDB8863FA4DDAF35.idx  alarm.h.70814E6B3222934F.idx  animimg001.c.6CB44F0BEE230320.idx  animimg002.c.55B7B27B4182D579.idx  animimg003.c.65A8CF89BB17CA27.idx  constants.h.37FCD3E62291F28D.idx  crc16.h.2CA46C854231E706.idx  (+568 more)
components/ai_engine/: CMakeLists.txt  ai_engine.cpp  ai_engine.cpp.bak  ai_engine.h
components/alarm/: CMakeLists.txt  alarm.cpp  alarm.h
components/display/: CMakeLists.txt  display.c  display.cpp  display.h
components/espnow_handler/: CMakeLists.txt  espnow_handler.c  espnow_handler.cpp  espnow_handler.h
components/hive_manager/: CMakeLists.txt  hive_manager.c  hive_manager.cpp  hive_manager.h
components/joystick/: CMakeLists.txt  joystick.c  joystick.cpp  joystick.h
components/nvs_logger/: CMakeLists.txt  nvs_logger.cpp  nvs_logger.h
components/ota_update/: CMakeLists.txt  ota_update.cpp  ota_update.h
components/setup_wizard/: CMakeLists.txt  setup_wizard.cpp  setup_wizard.h
components/system/: CMakeLists.txt  rw_lock.cpp  rw_lock.h  task_monitor.cpp  task_monitor.h
components/utils/: constants.h  crc16.h  helpers.cpp  helpers.h  types.h
components/web_server/: CMakeLists.txt  web_server.cpp  web_server.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  master_hive.c
main/ui/: ui.c  ui.h  ui_events.c
